// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CustomersPage > LTR snapshot 1`] = `
<div
  dir="ltr"
>
  <div
    class="flex flex-col gap-4"
  >
    <h1
      class="text-2xl font-semibold text-foreground"
    >
      customersTitle
    </h1>
    <div
      class="flex flex-wrap items-center gap-3"
    >
      <div
        class="relative flex items-center min-w-[200px] flex-1"
      >
        <input
          aria-label="searchCustomers"
          class="flex h-10 rounded-xl border border-border bg-background px-4 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:border-primary focus-visible:ring-2 focus-visible:ring-primary/30 disabled:cursor-not-allowed disabled:opacity-50 w-full pe-11"
          data-slot="input"
          dir="auto"
          placeholder="searchCustomers"
          type="search"
          value=""
        />
        <button
          aria-label="searchCustomers"
          class="group/button inline-flex shrink-0 items-center justify-center rounded-full border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-2 focus-visible:ring-ring/30 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive/20 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 bg-primary text-primary-foreground hover:bg-primary/80 size-8 [@media(pointer:coarse)]:min-h-11 [@media(pointer:coarse)]:min-w-11 absolute end-1.5 top-1/2 -translate-y-1/2"
          data-size="icon-sm"
          data-slot="button"
          data-variant="default"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-search size-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m21 21-4.34-4.34"
            />
            <circle
              cx="11"
              cy="11"
              r="8"
            />
          </svg>
        </button>
      </div>
      <button
        aria-label="newCustomer"
        class="group/button inline-flex shrink-0 items-center justify-center rounded-full border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-2 focus-visible:ring-ring/30 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive/20 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 bg-primary text-primary-foreground hover:bg-primary/80 h-9 gap-1.5 px-4 [@media(pointer:coarse)]:min-h-11"
        data-size="default"
        data-slot="button"
        data-variant="default"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-user-plus me-2"
          fill="none"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
          />
          <circle
            cx="9"
            cy="7"
            r="4"
          />
          <line
            x1="19"
            x2="19"
            y1="8"
            y2="14"
          />
          <line
            x1="22"
            x2="16"
            y1="11"
            y2="11"
          />
        </svg>
        newCustomer
      </button>
    </div>
    <div
      class="overflow-hidden rounded-xl bg-card shadow-card ring-[0.65px] ring-border/50"
    >
      <table
        class="w-full text-sm"
      >
        <thead
          class="bg-muted"
        >
          <tr>
            <th
              class="px-4 py-3 text-start font-medium text-muted-foreground text-xs uppercase tracking-wide"
            >
              columnName
            </th>
            <th
              class="px-4 py-3 text-start font-medium text-muted-foreground text-xs uppercase tracking-wide"
            >
              columnContact
            </th>
            <th
              class="px-4 py-3 text-start font-medium text-muted-foreground text-xs uppercase tracking-wide"
            >
              columnPhone
            </th>
            <th
              class="px-4 py-3 text-start font-medium text-muted-foreground text-xs uppercase tracking-wide"
            >
              columnEmail
            </th>
            <th
              class="px-4 py-3 text-start font-medium text-muted-foreground text-xs uppercase tracking-wide"
            >
              columnStatus
            </th>
          </tr>
        </thead>
        <tbody
          class="divide-y divide-border"
        >
          <tr
            class="hover:bg-muted/50"
          >
            <td
              class="px-4 py-3 font-medium text-foreground"
            >
              Kabul Pharma
            </td>
            <td
              class="px-4 py-3 text-muted-foreground"
            >
              —
            </td>
            <td
              class="px-4 py-3 text-muted-foreground"
            >
              —
            </td>
            <td
              class="px-4 py-3 text-muted-foreground"
            >
              —
            </td>
            <td
              class="px-4 py-3"
            >
              <span
                class="inline-flex items-center rounded-full bg-primary/10 px-2 py-0.5 text-xs font-medium text-primary"
              >
                statusActive
              </span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`CustomersPage > RTL snapshot 1`] = `
<div
  dir="rtl"
>
  <div
    class="flex flex-col gap-4"
  >
    <h1
      class="text-2xl font-semibold text-foreground"
    >
      customersTitle
    </h1>
    <div
      class="flex flex-wrap items-center gap-3"
    >
      <div
        class="relative flex items-center min-w-[200px] flex-1"
      >
        <input
          aria-label="searchCustomers"
          class="flex h-10 rounded-xl border border-border bg-background px-4 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:border-primary focus-visible:ring-2 focus-visible:ring-primary/30 disabled:cursor-not-allowed disabled:opacity-50 w-full pe-11"
          data-slot="input"
          dir="auto"
          placeholder="searchCustomers"
          type="search"
          value=""
        />
        <button
          aria-label="searchCustomers"
          class="group/button inline-flex shrink-0 items-center justify-center rounded-full border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-2 focus-visible:ring-ring/30 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive/20 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 bg-primary text-primary-foreground hover:bg-primary/80 size-8 [@media(pointer:coarse)]:min-h-11 [@media(pointer:coarse)]:min-w-11 absolute end-1.5 top-1/2 -translate-y-1/2"
          data-size="icon-sm"
          data-slot="button"
          data-variant="default"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-search size-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m21 21-4.34-4.34"
            />
            <circle
              cx="11"
              cy="11"
              r="8"
            />
          </svg>
        </button>
      </div>
      <button
        aria-label="newCustomer"
        class="group/button inline-flex shrink-0 items-center justify-center rounded-full border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-2 focus-visible:ring-ring/30 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive/20 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 bg-primary text-primary-foreground hover:bg-primary/80 h-9 gap-1.5 px-4 [@media(pointer:coarse)]:min-h-11"
        data-size="default"
        data-slot="button"
        data-variant="default"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-user-plus me-2"
          fill="none"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
          />
          <circle
            cx="9"
            cy="7"
            r="4"
          />
          <line
            x1="19"
            x2="19"
            y1="8"
            y2="14"
          />
          <line
            x1="22"
            x2="16"
            y1="11"
            y2="11"
          />
        </svg>
        newCustomer
      </button>
    </div>
    <div
      class="overflow-hidden rounded-xl bg-card shadow-card ring-[0.65px] ring-border/50"
    >
      <table
        class="w-full text-sm"
      >
        <thead
          class="bg-muted"
        >
          <tr>
            <th
              class="px-4 py-3 text-start font-medium text-muted-foreground text-xs uppercase tracking-wide"
            >
              columnName
            </th>
            <th
              class="px-4 py-3 text-start font-medium text-muted-foreground text-xs uppercase tracking-wide"
            >
              columnContact
            </th>
            <th
              class="px-4 py-3 text-start font-medium text-muted-foreground text-xs uppercase tracking-wide"
            >
              columnPhone
            </th>
            <th
              class="px-4 py-3 text-start font-medium text-muted-foreground text-xs uppercase tracking-wide"
            >
              columnEmail
            </th>
            <th
              class="px-4 py-3 text-start font-medium text-muted-foreground text-xs uppercase tracking-wide"
            >
              columnStatus
            </th>
          </tr>
        </thead>
        <tbody
          class="divide-y divide-border"
        >
          <tr
            class="hover:bg-muted/50"
          >
            <td
              class="px-4 py-3 font-medium text-foreground"
            >
              Kabul Pharma
            </td>
            <td
              class="px-4 py-3 text-muted-foreground"
            >
              —
            </td>
            <td
              class="px-4 py-3 text-muted-foreground"
            >
              —
            </td>
            <td
              class="px-4 py-3 text-muted-foreground"
            >
              —
            </td>
            <td
              class="px-4 py-3"
            >
              <span
                class="inline-flex items-center rounded-full bg-primary/10 px-2 py-0.5 text-xs font-medium text-primary"
              >
                statusActive
              </span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
